fix badge overflowing

--- a/assets/styles/default.scss
+++ b/assets/styles/default.scss
@@ -144,7 +144,7 @@ nav,
 	.badge {
 		position: absolute;
 		top: 1px;
-		right: -3px;
+		right: 0;
 		z-index: 1;
 		padding: 4px 8px;
 		background-color: $successColor;
